Cinnamon theme - using 'spacing' in menus, panel, buttons and dialog entries - bugfix

--- a/src/cinnamon/scss/_extends.scss
+++ b/src/cinnamon/scss/_extends.scss
@@ -291,7 +291,7 @@
 // used in selectors
 // .menu-applications-inner-box StScrollView, .starkmenu-favorites-box .menu-context-menu
 %menu-context-shared {
-    padding: $spacing $spacing_plus2;
+    padding: $spacing;
     margin: 0.5em 0;
     border-radius: $roundness;
     border: 1px solid $interior_border;
